# ppocr-server

./: configs.py  main.py  minio_client.py  ocr.py  pyproject.toml
docker/: Dockerfile  services.yaml
